# Biotreasure_Site

./: .gitignore  manage.py  pyproject.toml  requirements.txt
Biotreasure/: asgi.py  settings.py  urls.py  wsgi.py
mapas/: models.py  urls.py  views.py
mapas/templates/mapas/pontos/: editarpontos.html  inserirPontos.html  listarPontos.html
mapas/templates/mapas/rotas/: editarRota.html  inserirRotas.html  listarRotas.html
static/css/: style.css  stylemaps.css
static/js/: actionmaps.js
templates/: home_maps.html  modelo.html
turismo/: detector.py  models.py  urls.py  views.py
turismo/templates/turismo/: identificacao.html  index.html  pacotes.html  transporte.html
usuarios/: admin.py  models.py  urls.py  views.py
usuarios/templates/usuarios/: conta.html  inserir_usuarios.html  listar.html  perfil.html
