[tool.poetry]
name = "biotreasure-site"
version = "0.1.0"
description = ""
authors = ["cadu <carlos.marques5@estudante.ifms.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
gunicorn = "^23.0.0"
whitenoise = "^6.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
